# Hytale-NPC-Behavior-Editor

./: .gitignore  CMakeLists.txt  scene.json
Editor/: CMakeLists.txt
Editor/Include/: attributesEditor.hpp  collapsibleSectionWidget.hpp  jsonConverter.hpp  nodeWidgets.hpp  nodes.hpp  nodesBackup.hpp  optionalWidget.hpp  print.hpp  projectSelector.hpp  serialization.hpp  stateTransitionEditor.hpp  styleManager.hpp  typeUtils.hpp  types.hpp  vectorEditorWidget.hpp
Editor/src/: attributesEditor.cpp  collapsibleSectionWidget.cpp  jsonConverter.cpp  main.cpp  nodeFactory.cpp  nodeWidgets.cpp  nodes.cpp  optionalWidget.cpp  print.cpp  projectSelector.cpp  serialization.cpp  stateTransitionEditor.cpp  typeUtils.cpp  vectorEditorWidget.cpp
